# any2md

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_BRIEF.en.md  PROJECT_BRIEF.md  README.md  README.zh-CN.md  demo.py  main.py  projectBrif.md  pyproject.toml
.claude/plan/: any2md-cli-refactor.md  async-logging.md  audio-backend-default-switch.md  audio-video-converter.md  bugfix-summary.md  长音频切分转录.md  音频转录流式输出-实施总结.md  音频转录流式输出.md
.claude/team-plan/: async-upgrade-research.md  async-upgrade.md
.workflow/scratch/fix-local-audio-message/: config.json  context.md  plan.json  result.md
.workflow/scratch/fix-sync-async-conversion-duplication/: config.json  context.md  plan.json
src/any2md/: app.py  async_utils.py  cli.py  errors.py  io_state.py  locking.py  manifest.py  ocr.py  paths.py  postprocess.py  registry.py
src/any2md/auc/: __init__.py  client.py  errors.py  renderer.py  settings.py  task_store.py
src/any2md/converters/: __init__.py  audio.py  docx.py  epub.py  html.py  image.py  pdf.py  text.py
tests/: _bootstrap.py  test_app.py  test_async.py  test_cli.py  test_converters.py  test_ocr.py  test_paths.py  test_postprocess.py  test_registry.py
